# palautusrepositorio

./: README.md
nhl-statistics/: .coverage
nhl-statistics/src/: statistics_service.py
nhl-statistics/src/tests/: statistics_service_test.py
viikko1/nhl-statistics/: .coverage
viikko1/nhl-statistics/src/: index.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: erotus.py  summa.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: main.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/tests/: log.html  output.xml  report.html
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/: app.py
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: log.html  login.robot  output.xml  register.robot  report.html  (+1 more)
viikko4/verkkokauppa/: .coverage
viikko5/: vibe.md
viikko5/tennis/: review.md
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: agent.md.txt
viikko7/kivi-paperi-sakset/: README.md  app.py  pyproject.toml  tekoaly.py  tekoaly_parannettu.py  tuomari.py
viikko7/kivi-paperi-sakset-original/src/: index.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py
viikko7/kivi-paperi-sakset/templates/: base.html  game_over.html  index.html  play.html  result.html
viikko7/kivi-paperi-sakset/tests/: test_app.py  test_tekoaly.py  test_tekoaly_parannettu.py  test_tuomari.py
(+2 files in other folders)
