[tool.poetry]
name = "kivi-paperi-sakset-web"
version = "0.1.0"
description = "Rock Paper Scissors web game"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
